Improvements on Shopping Cart logic